--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "prettier": "prettier cli src --check",
     "prettier:fix": "pnpm run prettier -- --write",
     "sort": "npx sort-package-json",
-    "postinstall": "node -e \"try{require('./cli/clearCache')}catch(e){console.log(e)}\"",
+    "postinstall": "pnpm install && pnpm build:only",
     "publish:local": "npm publish --registry http://0.0.0.0:4873/",
     "ecosystem-ci": "node scripts/ecosystem-ci.js"
   },
